overview report add user name and sum of fee

--- a/public/templates/reportOverview.html
+++ b/public/templates/reportOverview.html
@@ -45,6 +45,8 @@
 			<th>Schwimmen</th>
 			<th>allein Nachhause</th>
 			<th>EbK</th>
+			<th>Vorname User</th>
+			<th>Nachname User</th>
 			<th>Betrag</th>
 			<th>sonstige Infos</th>
 			<th ng-repeat='a in activityNames'>
@@ -67,6 +69,8 @@
 				<td>{{formatBool(reg.canSwim)}}</td>
 				<td>{{formatBool(reg.canGoHomeAllone)}}</td>
 				<td>{{formatBool(reg.needsEbK)}}</td>
+				<td>{{reg.firstNameUser}}</td>
+				<td>{{reg.lastNameUser}}</td>
 				<td>{{reg.fee}}</td>
 				<td>{{reg.commentInternal}}</td>
 				<td ng-repeat='a in activityNames'>
