--- a/public/templates/myRegistrations.html
+++ b/public/templates/myRegistrations.html
@@ -33,7 +33,7 @@
 			<td>{{reg.lastNameParent}}</td>
 			<td><a href='mailto:{{reg.emailParent}}'>{{reg.emailParent}}</a></td>
 			<td>{{reg.phoneNumberParent}}</td>
-			<td><a href='/#/editOwnRegistration/{{reg._id}}' class="btn glyphicon glyphicon-pencil" type="button"></a></td>
+			<td><a href='/#/editOwnRegistration/{{reg._id}}' class="btn btn-success btn-small glyphicon glyphicon-pencil" type="button"><div style="font-size: 60%"><br />Editieren</div></a></td>
 			<!--<td ng-show='platform.isJDUL() || platform.isTest()'><button type="button" class="btn glyphicon glyphicon-trash" ng-click='deleteRegistration(reg._id)'></button></td>-->
 		</tr>
 	</table>
