--- a/public/templates/header/menu.html
+++ b/public/templates/header/menu.html
@@ -5,7 +5,7 @@
         <li><a id='nav_link_programme' href='/#/'>{{'NAV.PROGRAM' | translate}}</a></li>
         <li ng-show='iSvc.isAuthenticated()'><a id='nav_link_myres' href='/#/myRegistrations'>{{'NAV.MYRES' | translate}}</a></li>
         <li ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorized("fadmin") || iSvc.isAuthorized("ladmin")'><a href='/#/shop/calendar'>Meine Reservierungen</a></li>
-        <li ng-show='iSvc.isAuthorized("fadmin")'><a href='/#/myCommitments'>{{'NAV.MYCOMMITS' | translate}}</a></li>
+        <li ng-show='iSvc.isAuthorized("fadmin") || iSvc.isAuthorized("admin")'><a href='/#/myCommitments'>{{'NAV.MYCOMMITS' | translate}}</a></li>
         <li ng-show='iSvc.isAuthorized("fadmin") || iSvc.isAuthorized("admin")' class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 {{'NAV.REPORT' | translate}} <span class="caret"></span>
@@ -18,7 +18,7 @@
                 <li ng-show='iSvc.isAuthorized("admin")'><a href='/#/filterConfirmation'>{{'NAV.FILTERCONFIRM' | translate}}</a></li>
             </ul>
         </li>
-        <li ng-show='iSvc.isAuthorized("fadmin")' class="dropdown">
+        <li ng-show='iSvc.isAuthorized("admin") || iSvc.isAuthorized("fadmin")' class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 {{'NAV.LENDINGS' | translate}} <span class="caret"></span>
             </a>
