kiso 2020 text changes temp

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -20,8 +20,8 @@
 	<div ng-show="platform.isKiso() && isRegistrationWarningVisible()">
 		<div class="row">
 			<div class="col-sm-3">
-				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 14 März um 19:00!</span></h2>
-				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 14 marzo 2019 alle ore 19:00!</span></h2>
+				<h2><span ng-show="lang == 'de'" class="label label-info">Anmeldestart: 03 März 2020 um 19:00!</span></h2>
+				<h2><span ng-show="lang == 'it'" class="label label-info">Partenza iscrizioni: 03 marzo 2020 alle ore 19:00!</span></h2>
 			</div>
 		</div>
 	</div>
