--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,5 +1,9 @@
 <div class='container'>
-    <h2><strong>KiSo – Kindersommer 2019</strong></h2>
+	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
+	<p>
+		Ulteriori informazioni seguiranno a breve.
+	</p>
+	<!--
 	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
 	<h4>Chi può partecipare:</h4>
 	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
@@ -72,6 +76,7 @@
 	Costi: 90,00 Euro/partecipante<br />
 	Referenti: Valentina Bagnis e Willy Theil<br />		
 	</p>
+-->
 
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
