--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,5 +1,9 @@
 <div class='container'>
-	<h2><strong>KiSo – Kindersommer 2019</strong></h2>
+	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
+	<p>
+		Nähere Infos folgen in Kürze
+	</p>
+	<!--
 	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
 	<h4>Wer darf daran teilnehmen</h4>
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
@@ -73,7 +77,7 @@
 	Kosten: 80,00 Euro / Teilnehmer*in<br />
 	Referent*innen: Valentina Bagnis und Willy Theil<br />
 	</p>
-
+-->
 
 	<!--<div ng-include='"templates/agb/agb-kiso-de.html"'></div>-->
 
