--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -99,7 +99,10 @@
 						<div class='form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
 							<label for='schoolChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_SCHOOL_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
-								<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>
+									<select name='schoolChild' class='sel-base form-control' ng-disabled="disabledForSibling" ng-model='schoolChild'>
+										<option ng-repeat="level in schoolLevels" value='{{level.name}}'>{{level.name}}</option>
+									</select>
+								<!--<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>-->
 							</div>
 						</div>
 						<!-- HEALTHCHILD -->
