--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -105,13 +105,42 @@
 								<!--<input name='schoolChild' type='text' ng-model='schoolChild' required maxlength='100' class='form-control'></input>-->
 							</div>
 						</div>
+						<!-- HASHEALTHISSUES -->
+						<div ng-show='(type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+							<label for='hasHealthIssues' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTHISSUES_CHILD" | translate}}</label>
+							<div class='col-sm-8'>
+								<input type='checkbox' name='hasHealthIssues' ng-model='hasHealthIssues'></input>
+							</div>
+						</div>
+						<!-- HEALTHINCOMPATIBILITY -->
+						<div ng-show='hasHealthIssues && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+							<label for='healthIncompatibility' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_INCOMPATIBILITY" | translate}}</label>
+							<div class='col-sm-8'>
+								<input type='text' name='healthIncompatibility' ng-model='healthIncompatibility' maxlength='100' class='form-control'></input>
+							</div>
+						</div>
+						<!-- HEALTHALLERGY -->
+						<div ng-show='hasHealthIssues && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+							<label for='healthAllergy' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ALLERGY" | translate}}</label>
+							<div class='col-sm-8'>
+								<input type='text' name='healthAllergy' ng-model='healthAllergy' maxlength='100' class='form-control'></input>
+							</div>
+						</div>
+						<!-- HEALTHILLNESS -->
+						<div ng-show='hasHealthIssues && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
+							<label for='healthIllness' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ILLNESS" | translate}}</label>
+							<div class='col-sm-8'>
+								<input type='text' name='healthIllness' ng-model='healthIllness' maxlength='100' class='form-control'></input>
+							</div>
+						</div>
 						<!-- HEALTHCHILD -->
-						<div class='form-group' ng-class='{ "has-error": registrationForm.healthChild.$invalid }'>
+						<!--<div class='form-group' ng-class='{ "has-error": registrationForm.healthChild.$invalid }'>
 							<label for='healthChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<textarea name='healthChild' ng-model='healthChild' rows='3' maxlength='350' class='form-control'></textarea>
 							</div>
-						</div>
+						</div>-->
+
 						<!-- HASDISABILITY -->
 						<div ng-show='(type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
 							<label for='hasDisability' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD" | translate}}</label>
@@ -138,8 +167,15 @@
 							</div>
 						</div>
 						<!-- CANSWIM -->
-						<div ng-show='platform.isJDUL()' class='col-sm-offset-2 col-sm4'>
-							<input type='checkbox' name='canSwin' ng-model='canSwim'><strong>  {{"RESERVATION.LABEL_CANSWIM_CHILD" | translate}}</input>
+						<div ng-show='platform.isJDUL() || platform.isTest()' class='col-sm-offset-2 col-sm4'>
+							<div class="input-group">
+								<input type='checkbox' name='canSwin' ng-model='canSwim'><strong>  {{"RESERVATION.LABEL_CANSWIM_CHILD" | translate}}</input>
+								<button type="button" class="btn btn-info btn-sm" style="margin-left: 10px" ng-click="toggleSwimInfo()">?</button>
+							</div>
+							<div class="alert alert-info col-sm4" style="margin-top: 10px; max-width: 250;" role="alert" ng-show="swimInfoVisible">
+								<span>{{"RESERVATION.INFO_CANSWIM_1" | translate}}</span><br />
+								<span>{{"RESERVATION.INFO_CANSWIM_2" | translate}}</span>
+							</div>
 						</div>
 						<!-- CANGOHOMEALLONE -->
 						<div ng-show='platform.isJDUL()' class='col-sm-offset-2 col-sm4'>
@@ -150,7 +186,7 @@
 										<input type='checkbox' name='needsPreCare' ng-model='needsPreCare'><strong>{{"RESERVATION.LABEL_PRECARE_CHILD" | translate}}</input>
 						</div> -->
 						<br />
-						<div ng-show='type === "music"' class="panel panel-default">
+						<div ng-show='type === "music"' class="panel panel-default col-sm4">
 						<!-- JUNGBLÄSERWOCHE -->
 							<div ng-show='type == "music"' class="panel-heading text-orange"><strong>{{"RESERVATION.HEADER_MUSIC" | translate}}</strong></div>
 							<div ng-show='type == "music"' class="panel-body">
@@ -176,7 +212,7 @@
 						</div>
 						<div ng-show='type === "summer" || type === "music"' class='text-orange'><strong>{{"RESERVATION.HEADER_CONTACT" | translate}}</strong></div>
 						<!-- NAMECONTACT1 TELCONTACT1 -->
-						<div ng-show='type === "summer" || type === "music"' class='form-group'>
+						<div ng-show='type === "summer" || type === "music"' class='form-group col-sm10'>
 							<label for='nameContact1' class='control-label col-sm-2'>{{"RESERVATION.LABEL_NAME_CONTACT1" | translate}}</label>
 							<div class='col-sm-3'>
 								<input name='nameContact1' type='text' maxlength='250' ng-model='nameContact1' class='form-control'></input>
@@ -199,12 +235,20 @@
 						</div>
 						<!-- NEEDSAbK -->
 						<div ng-show='!isKiso && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4'>
-							<input type='checkbox' name='needsEbK' ng-model='needsEbK'><strong>{{"RESERVATION.LABEL_ABK_CHILD" | translate}}</input>
+							<div class="input-group">
+								<input type='checkbox' name='needsEbK' ng-model='needsEbK'><strong>{{"RESERVATION.LABEL_ABK_CHILD" | translate}}</input>
+								<button type="button" class="btn btn-info btn-sm" style="margin-left: 10px" ng-click="toggleebkInfo()">?</button>
+							</div>
+							<div class="alert alert-info col-sm3" style="margin-top: 10px" role="alert" ng-show="ebkInfoVisible">
+								<span>{{"RESERVATION.INFO_EBK_1" | translate}}</span><br />
+							</div>
 						</div>
 						<br />
+						<div class="row">
 						<button class='btn btn-lg btn-success' ng-click='setState(2)' ng-disabled='!isChildDataComplete()'>
 							{{"RESERVATION.BUTTON_NEXT" | translate }}
 						</button>
+						</div>
 					</div>				
 				</div>
 			</div>
