--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -128,9 +128,9 @@
 						</div>
 						<!-- HEALTHILLNESS -->
 						<div ng-show='hasHealthIssues && (type === "summer" || type === "music")' class='col-sm-offset-2 col-sm4 form-group'>
-							<label for='healthIllness' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ILLNESS" | translate}}</label>
+							<label for='healthIllnes' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTH_ILLNESS" | translate}}</label>
 							<div class='col-sm-8'>
-								<input type='text' name='healthIllness' ng-model='healthIllness' maxlength='100' class='form-control'></input>
+								<input type='text' name='healthIllnes' ng-model='healthIllnes' maxlength='100' class='form-control'></input>
 							</div>
 						</div>
 						<!-- HEALTHCHILD -->
