new features JDBL

--- a/public/templates/eventEdit.html
+++ b/public/templates/eventEdit.html
@@ -41,6 +41,7 @@
 				<option value='club'>Jugendtreff</option>
 				<option value='spiritnight'>Spiritnight</option>
 				<option value='jumprun'>Jump&Run</option>
+				<option value='bike'>E-Bike</option>
 			</select>
 		</div>
 	</div>
