--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -51,7 +51,7 @@
 							</div>
 						</div>
 						<!-- ADDRESSCHILD -->
-						<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }'>
+						<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }' ng-show="!platform.isJugendsommer() || !platform.isJDBL()">
 							<label for='addressChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_ADDRESS_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<input name='addressChild' type='text' ng-model='addressChild' ng-disabled="disabledForSibling" maxlength='100' class='form-control' required></input>
@@ -125,8 +125,7 @@
 							<div class='col-sm-8'>
 								<input type='text' name='disabilityDescription' ng-model='disabilityDescription' maxlength='100' class='form-control'></input>
 							</div>
-						</div>
-						
+						</div>	
 						<!--TSHIRTSIZE -->
 						<div ng-show='type === "summer" && isKiso' class='form-group' ng-class='{ "has-error": registrationForm.tShirtSize.$invalid}'>
 							<label for='tShirtSize' class='control-label col-sm-2'>{{"RESERVATION.LABEL_T_SHIRT_SIZE" | translate}}</label>
@@ -136,6 +135,14 @@
 									<option ng-show="lang === 'it'" ng-repeat="size in tShirtSizes" value='{{size.name}}'>{{size.name_it}}</option>
 								</select>
 							</div>
+						</div>
+						<!-- HASOWNEBIKE -->
+						<div ng-show='type == "bike"' class='col-sm-offset-2 col-sm-2'>
+							<input type='checkbox' name='hasOwnEBike' ng-model='hasOwnEBike'><strong>  {{"RESERVATION.LABEL_HASOWNEBIKE" | translate}}</input>
+						</div>
+						<div ng-show='type == "bike" && hasWonEBike' class='col-sm-offset-4'>
+							<label for='budgetBusiness' class='control-label col-sm-2'><strong> {{"RESERVATION.LABEL_HEIGHT_CHILD" | translate}}</strong>></label>
+							<input type='number' class='col-sm-10' ng-model='heightChild' min='0' step='0.0'></input>
 						</div>
 						<!-- CANSWIM -->
 						<div ng-show='platform.isJDUL()' class='col-sm-offset-2 col-sm4'>
@@ -251,6 +258,9 @@
 						<button class='btn btn-lg btn-success' ng-click='setState(3)' ng-disabled='!isActivityDataComplete()'>
 							{{"RESERVATION.BUTTON_NEXT" | translate }}	
 						</button>
+						<button class='btn btn-lg btn-info' ng-click='setState(1)'>
+							{{"RESERVATION.BUTTON_PREVIOUS" | translate }}	
+						</button>
 					</div>
 				</div>
 			</div>
@@ -271,7 +281,8 @@
 						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleAgb()" >{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong></input>
 						<div class="panel panel-default" ng-class="agbVisibility ? 'show' : 'hidden'">
 							<div class="panel-body">
-								<div ng-show="platform.isJDBL() || platform.isJugendsommer()" ng-include src='"templates/agb/agb-jdbl.html"'></div>
+								<div ng-show="(platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/agb-jdbl-de.html"'></div>
+								<div ng-show="(platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/agb-jdbl-it.html"'></div>
 
 								<div ng-show="platform.isKiso() && lang == 'de'" ng-include src='"templates/agb/agb-kiso-de.html"'></div>
 								<div ng-show="platform.isKiso() && lang == 'it'" ng-include src='"templates/agb/agb-kiso-it.html"'></div>
@@ -315,6 +326,24 @@
 								</div>
 							</div>
 						</div>
+						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer())">
+								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}</button>{{"RESERVATION.LABEL_HEALTH3_JDB" | translate}}</strong></input>
+								<div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
+									<div class="panel-body">
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+									</div>
+								</div>
+						</div>
+						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer())">
+								<input type='checkbox' name='media-jdbl' ng-model='acceptsMediaPublication'><strong>{{"RESERVATION.LABEL_MEDIA1_JDBL" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_MEDIA2_JDBL" | translate}}</button>{{"RESERVATION.LABEL_MEDIA3_JDBL" | translate}}</strong></input>
+								<div class="panel panel-default" ng-class="mediaVisibility ? 'show' : 'hidden'">
+									<div class="panel-body">
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
+										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'it'" ng-include src='"templates/agb/ds-jdbl-it.html"'></div>
+									</div>
+								</div>
+						</div>
 						<br />
 						<div ng-show="(platform.isTest() || platform.isKiso())">
 							<input type='checkbox' name='newsletter' ng-model='acceptsNewsletter'><strong>{{"RESERVATION.LABEL_NEWSLETTER" | translate}}</strong></input>
@@ -329,6 +358,9 @@
 				<div class='col-sm-offset-2 col-sm-8' style='margin-top:15px;'>
 					<input class='btn btn-success bnt-lg btn-block' ng-click='save()' translate-attr="{value: 'RESERVATION.BUTTON_SUBMIT'}" ng-disabled='!isRegistrationAllowed()'>
 				</div>
+				<button class='btn btn-lg btn-info' ng-click='setState(2)'>
+						{{"RESERVATION.BUTTON_PREVIOUS" | translate }}	
+				</button>
 			</div>
 		</div>
 	</div>
