--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -375,7 +375,7 @@
 							</div>
 						</div>
 						<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer())">
-								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}</button>{{"RESERVATION.LABEL_HEALTH3_JDB" | translate}}</strong></input>
+								<input type='checkbox' name='health-jdbl' ng-model='acceptHealth'><strong>{{"RESERVATION.LABEL_HEALTH1_JDBL" | translate}}<button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_HEALTH2_JDBL" | translate}}</button>{{"RESERVATION.LABEL_HEALTH3_JDBL" | translate}}</strong></input>
 								<div class="panel panel-default" ng-class="healthVisibility ? 'show' : 'hidden'">
 									<div class="panel-body">
 										<div ng-show="(platform.isTest() || platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/ds-jdbl-de.html"'></div>
