--- a/public/templates/agb/ds-jdbl-de.html
+++ b/public/templates/agb/ds-jdbl-de.html
@@ -1,9 +1,191 @@
 <div class="container">
-    <h2 class='text-orange col-sm-12'>Datenschutzinformationsblatt
-			Sommerprogramm Jugenddienst Bozen-Land</h2>
-    <div ng-show='type === "summer" || type === "music" || type === "club"'>
+    <h3 class='text-orange col-sm-12'>Datenschutzinformationsblatt</h3>
+	<h4>Sommerprogramm Jugenddienst Bozen-Land</h4>
+    <div ng-show='type === "summer" || type === "music" || type === "club" || type === "bike"'>
 	    <div class='col-sm-9'>
-	        
+			<p>Wir freuen uns, dass Du an unserem Sommerprogramm teilnehmen möchtest. Damit Du teilnehmen kannst, benötigen wir einige Daten von Dir. Welche das sind, erfahren Du und Deine Eltern / erziehungsberechtigten Personen in diesem Informationsblatt.</p>
+			<ol>
+				<li>
+					<h4>Zweck der Angabe Ihrer personenbezogenen Daten></h4>
+					<div>
+						Wir benötigen bestimmte Daten von Dir, damit wir wissen, wer am Sommerprogramm teilnimmt, wie alt Du bist und in welche Klasse Du gehst, da das Programm jungen Menschen ab einem bestimmten Personen vorenthalten ist. Ebenso benötigen wir Daten Deiner Eltern / erziehungsberechtigten Personen für organisatorische Angelegenheiten und Kontakte im Notfall. Zudem benötigen wir einige Gesundheitsdaten von Dir, damit wir zum einen auf Deine Bedürfnisse (bspw. Essen, Beeinträchtigungen etc.) Rücksicht nehmen können und wir, im Bedarfsfall, Dir unmittelbar helfen können. Daten für unsere Öffentlichkeitsarbeit (wir wollen gerne Fotos von Dir veröffentlichen) sind nicht für die Teilnahme am Sommerprogramm notwendig. Damit wir diese verarbeiten können, benötigen wir die Einwilligung Deiner Eltern / erziehungsberechtigten Personen.
+					</div>
+				</li>
+				<li>
+					<h4>Minderjährige Personen</h4>
+					<div>
+						Da Du minderjährig bist, müssen beide Eltern bzw. die erziehungsberechtigten Personen diese Datenschutzerklärung zur Kenntnis nehmen bzw. müssen diese die Einwilligung sowohl der Gesundheitsdaten als auch zur Verarbeitung der fakultativen Daten geben. In der Folge umfasst der Begriff „Du“ sowohl Dich persönlich auch die jeweils erziehungsberechtigten Personen.
+					</div>
+				</li>
+				<li>
+					<h4>Freiwilligkeit der Verarbeitung</h4>
+					<div>
+						Die Erhebung und Verarbeitung der personenbezogenen Daten seitens des JD Bozen-Land erfolgt freiwillig. Du bist also nicht verpflichtet, irgendwelche personenbezogenen Daten dem JD Bozen-Land zu übermitteln. Wenn Du aber am Sommerprogramm teilnehmen willst, musst Du uns die notwendigen Daten zur Verfügung stellen.
+					</div>
+				</li>
+				<li>
+					<h4>Verantwortlicher für die Verarbeitung der personenbezogenen Daten</h4>
+					<div>
+						Verantwortlich für die Verarbeitung der personenbezogenen Daten ist der Jugenddienst Bozen-Land EO („JD Bozen-Land“), Andreas-Hofer-Straße 36, 39100 Bozen, Steuernummer: 94072680211 in Person des Vorsitzenden, Tel. 0471-324753, E-Mail: info@jugenddienst.com.
+					</div>
+				</li>
+				<li>
+					<h4>Art der personenbezogenen Daten, die verarbeitet werden</h4>
+					<div>Der JD Bozen-Land weist darauf hin, dass sowohl allgemeine personenbezogene Daten, als auch besondere Kategorien von personenbezogenen Daten (sensible Daten wie Gesundheitsdaten) erhoben und verarbeitet (gespeichert, weitergegeben, usw.) werden.</div>
+				</li>
+				<li>
+					<h4>Mitteilung der Daten an Dritte</h4>
+					<div>
+						Deine personenbezogenen Daten werden an Dritte weitergeleitet. Die Weiterleitung erfolgt dabei an unserem Auftragsverarbeiter, über welchen wir die Onlineanmeldung vornehmen.
+					</div>
+				</li>
+				<li>
+					<h4>Dauer der Verarbeitung</h4>
+					<div>
+						Deine Daten werden grundsätzlich bis zum Ende des darauffolgenden Kalenderjahres gespeichert, um jenen Personen, die eine Teilnahmebestätigung für fiskalische Zwecke benötigen, bereitstellen zu können. Zudem werden die Programme von der öffentlichen Hand mitfinanziert, weshalb diese Daten für den genannten Zeitraum für etwaige Kontrollen gespeichert werden müssen. Einzelheiten findest Du in der nachstehenden Übersicht.
+					</div>
+				</li>
+				<li>
+					<h4>Übersicht über die Verarbeitung der notwendigen personenbezogenen Daten</h4>
+					<div>
+						Folgende personenbezogene Daten werden notwendigerweise erhoben.
+					</div>
+					<table style="font-size: 60%">
+						<thead>
+							<tr>
+								<th><strong>Datensatzbezeichnung</strong></th>
+								<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
+								<th><strong>Geplante Löschung</strong></th>
+								<th><strong>Externe Weitergabe?</strong></th>
+								<th><strong>Zweck der Weiterleitung</strong></th>
+							</tr>
+						</thead>						
+						<tbody>
+						<tr>
+							<td>Vor- und Nachname</td>
+							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da die Teilnehmer anagrafisch erfasst werden müssen</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Vor- und Nachname der Eltern / erziehungsberechtigten Personen</td>
+							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Kontaktierung der Eltern / erziehungsberechtigten Personen des Teilnehmers im Bedarfsfal</td>
+							<td>Ende des darauffolgenden Kalenderjahre</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Vor- und Nachname des Notfallkontakts (falls nicht Eltern / erziehungsberechtigten Personen)</td>
+							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Kontaktierung einer Kontaktperson des Teilnehmers im Bedarfsfall</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Geburtsdatum</td>
+							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da bestimmte Programme nur für Personen ab bzw. bis zu einem bestimmten Alter vorenthalten sind</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Wohnort (Gemeinde)</td>
+							<td>Für die Teilnahme am Programm, da bestimmte Programme nur für Personen mit Wohnsitz an einem bestimmten Ort vorenthalten sind</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Besuchte Schulklasse</td>
+							<td>Art. 6, Abs. 1, Buchst. b) – notwendig für die Teilnahme am Programm, da bestimmte Programme nur für Personen, die eine bestimmte Klasse besuchen, vorenthalten sind</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Telefonnummer / Handynummer der Eltern / erziehungsberechtigten Persone</td>
+							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land bei dringenden organisatorischen Angelegenheiten (Termine, Terminverschiebungen, etc.) mit den Eltern / erziehungsberechtigten Personen unmittelbar Kontakt aufnehmen zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der  Eltern</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>Telefonnummer \/ Handynummer des Notfallkontakts (falls nicht Eltern \/ erziehungsberechtigten Personen)></td>
+							<td>Art. 6, Abs. 1, Buchst. f) – berechtigtes Interesse des JD Bozen-Land, bei Dringlichkeiten Notfallkontakt erreichen zu können. Das Interesse des JD Bozen-Land, im Bedarfsfall den Notfallkontakt erreichen zu können überwiegt dem Interesse des Notfallkontakts auf das Recht des Schutzes der Daten</td>
+							<td>Ende des darauffolgenden Kalenderjahres</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						<tr>
+							<td>E-Mail der Eltern / der erziehungsberechtigten Personen</td>
+							<td>Interesse des JD Bozen-Land, organisatorische Informationen (bspw. zum Programm, Hinweise, etc.) den Eltern / erziehungsberechtigten Personen papierlos zusenden zu können. Das Interesse des JD Bozen-Land, organisatorische Mitteilungen hinsichtlich des Programms, an welchem das Kind / der Jugendliche teilnimmt, vorzunehmen überwiegt dem Recht auf Schutz der Daten der Eltern / erziehungsberechtigten Personen</td>
+							<td>Die Daten werden für die Zusendung des Programmkatalogs für kommende Jahre gespeichert, um die Eltern / erziehungsberechtigten Personen über die nächsten Sommerprogramme zu informieren. Diese Daten werden bei Ausübung Recht auf Löschung gelöscht</td>
+							<td>Onlineanmeldeprogramm läuft über einen angemieteten Server, der in Österreich belegen ist</td>
+							<td>Art. 6, Abs. 1, Buchst. b) und c) iVm Art. 28 – Übermittlung erfolgt auf Grundlage eines Auftragsverarbeitungsvertrages</td>
+						</tr>
+						</tbody>
+						</table>
+					</table>
+				</li>
+				<li>
+					<h4>Übersicht über die Verarbeitung von Gesundheitsdaten</h4>
+					<div>
+						<table style="font-size: 60%">
+							<thead>
+								<tr>
+									<th><strong>Datensatzbezeichnung</strong></th>
+									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
+									<th><strong>Geplante Löschung</strong></th>
+									<th><strong>Externe Weitergabe?</strong></th>
+									<th><strong>Zweck der Weiterleitung</strong></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+								</tr>
+								<tr>
+			
+								</tr>
+								<tr>
+			
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</li>
+				<li>
+					<h4>Übersicht über die Verarbeitung der fakultativen personenbezogenen Daten</h4>
+					<div>
+						<table style="font-size: 60%">
+							<thead>
+								<tr>
+									<th><strong>Datensatzbezeichnung</strong></th>
+									<th><strong>echtsgrundlage DSGVO – Zweck der Datenverarbeitung</strong></th>
+									<th><strong>Geplante Löschung</strong></th>
+									<th><strong>Externe Weitergabe?</strong></th>
+									<th><strong>Zweck der Weiterleitung</strong></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+								</tr>
+								<tr>
+								</tr>
+								<tr>
+		
+								</tr>
+							</tbody>
+						</table>
+					</div>
+				</li>
+			</ol>
+
+
+
+
+
+
 	    </div>
 	    <br />
 	    <h2 class='text-orange col-sm-12'></h2>
