--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -406,7 +406,7 @@
 				<div class='col-sm-offset-2 col-sm-8' style='margin-top:15px;'>
 					<input class='btn btn-success bnt-lg btn-block' ng-click='save()' translate-attr="{value: 'RESERVATION.BUTTON_SUBMIT'}" ng-disabled='!isRegistrationAllowed()'>
 				</div>
-				<button class='btn btn-lg btn-info btn-block col-sm-offset-1 col-sm-2' ng-click='setState(2)'>
+				<button class='btn btn-sm btn-info col-sm-offset-1 col-sm-1' style='margin-top:15px;' ng-click='setState(2)'>
 						{{"RESERVATION.BUTTON_PREVIOUS" | translate }}	
 				</button>
 			</div>
