add pdf download

--- a/public/templates/events.html
+++ b/public/templates/events.html
@@ -50,6 +50,8 @@
 							<span ng-show='event.type === "spiritnight"' class='glyphicon glyphicon-education'></span>
 							<span ng-show='event.type === "club"' class='glyphicon glyphicon-home'></span>
 							<span ng-show='event.type === "jumprun"' class='glyphicon glyphicon-refresh'></span>
+							<span ng-show='event.type === "bike"' class='glyphicon glyphicon-map-marker'></span>
+
 					</div>
 				</div>
 				<div class='col-sm-9'>
