--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -326,7 +326,7 @@
 						</div>
 						<br />
 						<!--<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" data-toggle="modal" data-target=".bs-example-modal-lg">{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong></input>-->
-						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleAgb()" >{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong><strong>{{"RESERVATION.LABEL_TERMS3" | translate}}</input>
+						<input type='checkbox' name='agb' ng-model='acceptAGB'><strong>{{"RESERVATION.LABEL_TERMS1" | translate}}<button type="button" class="btn btn-default" ng-click="toggleAgb()" >{{"RESERVATION.LABEL_TERMS2" | translate}}</button></strong><strong>{{"RESERVATION.LABEL_TERMS3" | translate}}</strong><button type="button" class="btn btn-default" ng-click="toggleMedia()" >{{"RESERVATION.LABEL_TERMS4" | translate}}</button><strong>{{"RESERVATION.LABEL_TERMS5" | translate}}</strong></input>
 						<div class="panel panel-default" ng-class="agbVisibility ? 'show' : 'hidden'">
 							<div class="panel-body">
 								<div ng-show="(platform.isJDBL() || platform.isJugendsommer()) && lang == 'de'" ng-include src='"templates/agb/agb-jdbl-de.html"'></div>
